--- a/static.css
+++ b/static.css
@@ -1,3 +1,6 @@
+#preview > div {
+	background-color: #fff;
+}
 @import url(http://fonts.googleapis.com/css?family=Vollkorn:400,400italic,700,700italic&subset=latin);
 
 html, body {
