--- a/css/component.css
+++ b/css/component.css
@@ -83,7 +83,7 @@ body {
 	width: 140px;
 	height: 140px;
 	border-radius: 50%;
-	background: #47a3da;
+	background: #999;
 }
 
 .profile img {
@@ -191,6 +191,8 @@ body {
 	color: #97a8b2;
 	-webkit-transform: translateX(100%);
 	transform: translateX(100%);
+	text-align:justify;
+	text-justify:inter-word;
 }
 
 .splitlayout.open-right {
@@ -202,9 +204,11 @@ body {
 	outline: 5px solid #34495e; /* avoid rounding gaps */
 	background: #34495e;
 	color: #fff;
-	text-align: right;
 	-webkit-transform: translateX(-100%);
 	transform: translateX(-100%);
+	padding: 0 50px 0 50px;
+	text-align:justify;
+	text-justify:inter-word;
 }
 
 .splitlayout.open-left {
