--- a/css/component.css
+++ b/css/component.css
@@ -191,8 +191,8 @@ body {
 	color: #97a8b2;
 	-webkit-transform: translateX(100%);
 	transform: translateX(100%);
-	text-align:justify;
-	text-justify:inter-word;
+	/*text-align:justify;
+	text-justify:inter-word;*/
 }
 
 .splitlayout.open-right {
@@ -207,8 +207,8 @@ body {
 	-webkit-transform: translateX(-100%);
 	transform: translateX(-100%);
 	padding: 0 50px 0 50px;
-	text-align:justify;
-	text-justify:inter-word;
+	/*text-align:justify;
+	text-justify:inter-word;*/
 }
 
 .splitlayout.open-left {
